--- a/abc_comprehensivecba_revised.tex
+++ b/abc_comprehensivecba_revised.tex
@@ -433,7 +433,7 @@ Table~\ref{table:predsens} shows that there is close agreement between non-param
 
 We adapt the Future Adult Model (FAM)---a forecasting model for health conditions and costs developed by Dana Goldman and coauthors \citep{Goldman_etal_2015_Future-Elderly-Model-Report}.\footnote{Appendix~\ref{appendix:health} discusses the FAM methodology in detail. It is not a competing risks model, but forecasts vectors of incidence and costs of disease one category at a time using univariate models.} We forecast health outcomes of program participants from their mid 30s up to their projected age of death.\footnote{The simulation starts at the age in which we observe the subjects' age-30 follow-up.} Our version of FAM passes a variety of specification tests and accurately forecasts health outcomes and health behaviors.\footnote{In Appendix~\ref{appendix:health-validation}, we present tests of the model assumptions and predictive performance for population aggregate health and health behavior outcomes.}
 
-Our methodology has four steps--extensive details are provided in Appendix~\ref{appendix:health}: (i) follow an adapted version of the steps in Section~\ref{section:cbamethodology} to predict the state occupancy probabilities for the ABC/CARE subjects; (ii) estimate quality-adjusted life year (QALY) models using the Medical Expenditure Panel Survey (MEPS) and the PSID;\footnote{QALY is a measure which reweighs a year of life according to its quality given the burden of disease \citep{Dolan_1997_Modeling_MC,Shaw_etal_2005_EQ5D_MC}.} (iii) estimate medical cost models using MEPS and the Medicare Current Beneficiary Survey (MCBS), allowing estimates to differ by health state and observed characteristics; and (iv) forecast the medical expenditures and QALYs that correspond to the simulated individual health trajectories.\footnote{As part of step (i), we impute some of the variables used to initialize the FAM models (see  Appendix~\ref{section:FAM_ABC_impute}).}
+Our methodology has four steps--extensive details are provided in Appendix~\ref{appendix:health}: (i) follow an adapted version of the steps in Section~\ref{section:cbamethodology} to predict the health state occupancy probabilities for the ABC/CARE subjects; (ii) estimate quality-adjusted life year (QALY) models using the Medical Expenditure Panel Survey (MEPS) and the PSID;\footnote{QALY is a measure which reweighs a year of life according to its quality given the burden of disease \citep{Dolan_1997_Modeling_MC,Shaw_etal_2005_EQ5D_MC}.} (iii) estimate medical cost models using MEPS and the Medicare Current Beneficiary Survey (MCBS), allowing estimates to differ by health state and observed characteristics; and (iv) forecast the medical expenditures and QALYs that correspond to the simulated individual health trajectories.\footnote{As part of step (i), we impute some of the variables used to initialize the FAM models (see  Appendix~\ref{section:FAM_ABC_impute}).}
 
 Our application of FAM uses the information on age-30 observed characteristics and a mid-30s health survey allowing us to account for components that are important for forecasting health outcomes. The models forecast the probability of having any of the major disease categories and health states at age $a+1$ based on the state of health as summarized by major disease categories at age $a$.\footnote{See Tables~\ref{table:supertab1} to~\ref{table:supertab3} for a summary. Our forecasts are based on two-year lags, due to data limitations in the auxiliary sources we use to simulate the FAM. For example, if the individual is 30 (31) years old in the age-30 interview, we simulate the trajectory of her health status at ages 30 (31), 32 (33), 34 (35), and so on until her projected death. Absorbing states are an exception. For example, heart disease at age $a$ does not enter in the estimation for heart disease at age $a+1$ because it is an absorbing state: once a person has heart disease, she carries it through the rest of her life.}
 
