all edits in for anna to check

--- a/abc_comprehensivecba_revised.tex
+++ b/abc_comprehensivecba_revised.tex
@@ -111,7 +111,7 @@ As a byproduct, we also address the problem of aggregating evidence from the mul
 
 We construct synthetic cohorts from non-experimental samples. The cohorts are chosen to approximate the life cycles of experimentals in their post-experimental years. We formulate and estimate production functions that predict program treatment effects and assess their within-sample forecast accuracy. Some of the inputs of the estimated production functions are changed by treatment and are measured in both experimental and non-experimental samples. If the production functions mapping inputs to outputs across cohorts are unaffected by treatment (i.e., are ``treatment invariant''), we can safely use them to forecast treatment effects at older ages provided that we accurately forecast the path of future inputs. We test and do not reject treatment invariance in experimental and non-experimental samples that overlap in age.\footnote{See \cite{Hurwicz_1962_structural} for the definition treatment (policy) invariance. We build on the methodology of \citet{Heckman_Pinto_etal_2013_PerryFactor}, who relate intermediate and long-term outcomes in a mediation analysis. However, they do not construct out-of-sample forecasts.} We forecast experimental treatment effects using our estimated production functions applied to non-experimental data with inputs and outputs suitably adjusted for cohort effects.
 
-Our analysis is a template for estimating the life-cycle gains of social experiments for which there is less than full lifetime follow-up. Supplementing experimental data with non-experimental data enhances the information available from social experiments. Using economic theory and econometric methods to generate empirically concordant forecasts enhances the credibility of our estimates.
+Our analysis is a template for estimating the life-cycle gains of social experiments for which there is less than full lifetime follow-up. Supplementing experimental data with non-experimental data enhances the information available from social experiments. Using economic theory and econometric methods to generate empirically concordant forecasts enhances the credibility of the procedure.
 
 The quest for long-run estimates from experiments with short-term follow-up has recently led to application of informal procedures for estimating long-term benefits using short-term measures of childhood test scores \citep[e.g.][]{Chetty_Friedman_etal_2011_QJoE,Kline_Walters_2016_QJE}. We show by example that these procedures can give very misleading estimates of true life cycle program benefits.
 
@@ -173,7 +173,7 @@ F_{k,a}^0 \left( \cdot | \text{\textbf{ Fix }} \bm{X}_{k,a}^d = \bm{x}, \bm{B}_{
   &=&  F_{a} \left( \cdot  | \text{\textbf{ Fix }} \bm{X}_{k,a}^d = \bm{x}, \bm{B}_{k} = \bm{b}  \right), \label{eq:strucinvarianceF}
 \end{eqnarray}
 \end{subequations}
-where $F_{k,a}^j \left( \bm{z} | \text{\textbf{ Fix }} \bm{\Omega} = \bm{\omega} \right)$ denotes the distribution of $\bm{Z}$ for $\bm{\Omega}$ fixed at $\bm{\omega}$ and $F_a \left( \bm{z} | \text{\textbf{ Fix }} \bm{\Omega} = \bm{\omega} \right)$ is the distribution of the errors of the production functions that are assumed to be common across treatment regimes and samples, given $\text{\textbf{ Fix }} \left( \bm{X}_{k,a}^d = \bm{x}, \bm{B}_{k} = \bm{b} \right)$. $\square$
+where $F_{k,a}^j \left( \bm{z} | \text{\textbf{ Fix }} \bm{\Omega} = \bm{\omega} \right)$ is the distribution of $\bm{Z}$ for $\bm{\Omega}$ fixed at $\bm{\omega}$ and $F_a \left( \bm{z} | \text{\textbf{ Fix }} \bm{\Omega} = \bm{\omega} \right)$ is the age-$a$ distribution of the errors of the production functions, assumed to be common across treatment regimes and samples given $\bm{X}_{k,a}^d = \bm{x}$ and $\bm{B}_{k} = \bm{b}$. $\square$
 \end{assumption}
 
 We clarify Assumption~\ref{ass:summary} with three remarks.
@@ -228,20 +228,20 @@ By design, there is no treatment effect in the non-experimental sample. Matching
 Note: Panel (a) displays the forecast labor income for males in the auxiliary samples for whom $\bm{B} \in \mathcal{B}_0$, i.e., ABC/CARE eligible, and for the synthetic cohort we construct based on the method proposed in this section. We combine data from the Panel Study of Income Dynamics (PSID), the National Longitudinal Survey of Youth 1979 (NLSY79), and the Children of the National Longitudinal Survey of Youth 1979 (CNLSY79). We highlight the observed labor income at oldest $a^*$ (age 30) for the ABC/CARE control-group participants. We stop at age 45 for want of data to compute the childhood risk index defining $\bm{B} \in \mathcal{B}_0$ in the auxiliary samples. Panel (b) displays the analogous figure for females. Standard errors are based on the empirical bootstrap distribution. $a^*$ is the oldest age in the experimental sample.
 \end{sidewaysfigure}
 
-\textbf{Step 2. Establishing Exogeneity of Inputs.} Forecasting does not require that we take a position on the exogeneity of $\bm{X}^d_{k,a}$ for $k \in \{e,n\}$ and $a \in \{ a, \ldots \bar{A} \}$ with respect to labor income. Estimated structural models with biased parameters can still give reliable forecasts if relationships between observed and unobserved variables are the same within sample and in the forecast sample.\footnote{See \cite{Liu-etal-2016-USC-Data-Models}.  Conditions~\ref{cond:cond1} to~\ref{cond:cond3} in Appendix~\ref{appendix:incomplete} spell out the requirements.} However, exogeneity facilitates the use of economic theory to interpret treatment effects, to forecast outcomes in samples where inputs are manipulated differently than in the experimental sample, and to test the validity of the construction of our synthetic cohort. Exogeneity also makes identification of $\bm{\phi}^d_{k,a}\left( \cdot, \cdot \right)$ in the non-experimental sample straightforward. Assumption~\ref{ass:exog} formalizes a strong form of the exogeneity condition.
+\textbf{Step 2. Establishing Exogeneity of Inputs.} Forecasting does not require that we take a position on the exogeneity of $\bm{X}^d_{k,a}$ for $k \in \{e,n\}$ and $a \in \{ 1, \ldots \bar{A} \}$ with respect to labor income. Estimated structural models with biased parameters can still give reliable forecasts if relationships between observed and unobserved variables are the same within sample and in the forecast sample.\footnote{See \cite{Liu-etal-2016-USC-Data-Models}.  Conditions~\ref{cond:cond1} to~\ref{cond:cond3} in Appendix~\ref{appendix:incomplete} spell out the requirements.} However, exogeneity facilitates the use of economic theory to interpret treatment effects, to forecast outcomes in samples where inputs are manipulated differently than in the experimental sample, and to test the validity of the construction of our synthetic cohort. Exogeneity also makes identification of $\bm{\phi}^d_{k,a}\left( \cdot, \cdot \right)$ in the non-experimental sample straightforward. Assumption~\ref{ass:exog} formalizes a strong form of the exogeneity condition.
 
 \onehalfspacing
 \begin{assumption}\label{ass:exog} \textbf{Exogeneity}
-Let $\{ 1, \ldots, \bar{A} \}$ index the periods of a life cycle. For all $a, a'' \in \{ 1, \ldots, \bar{A} \}$ and for $d, d' \in \{0,1\}$,
+Let $\{ 1, \ldots, \bar{A} \}$ index the periods of a life cycle. For all $a, a' \in \{ 1, \ldots, \bar{A} \}$ and for $d, d' \in \{0,1\}$,
 \begin{equation}
-\bm{\varepsilon}^d_{k,a} \indep \bm{X}^{d^{\prime}}_{k,a^{''}} | \bm{B}_k = \bm{b}
+\bm{\varepsilon}^d_{k,a} \indep \bm{X}^{d^{\prime}}_{k,a^{'}} | \bm{B}_k = \bm{b}
 \end{equation}
 for all $\bm{b}$ in the support of $\bm{B}_k, \: k \in \{e,n\}$, where ``$\bm{M} \indep \bm{N}|\bm{Q}$'' denotes independence of $\bm{M}$ and $\bm{N}$ given $\bm{Q}$. $\square$
 \end{assumption}
 \doublespacing
 Below we discuss how this condition can be weakened and unbiased forecasts can still be obtained.
 
-To appreciate the benefit of Assumption~\ref{ass:exog}, consider the following example. Suppose that years of education is a component of $\bm{X}^{d'}_{k,{a''}}$. The joint distribution of $\bm{\varepsilon}_{k,a}^d$ and $\bm{X}^{d'}_{k,{a''}}$ can differ substantially across experimental and non-experimental samples. In the experimental sample, years of education are boosted by treatment, which is randomly assigned. In the non-experimental samples, however, there is no experimental variation. Individuals with high observed levels of education could have high values of $\bm{\varepsilon}_{k,a}^d$ due to omitted ability. This creates a fundamentally different dependence between $\bm{\varepsilon}_{k,a}^d$ and $\bm{X}_{k,{a''}}^{d'}$ in the non-experimental sample. Assumption~\ref{ass:exog} avoids this problem when making forecasts. Below, we establish that our forecasts based on this assumption are concordant with forecasts from approaches that do not necessarily require Assumption~\ref{ass:exog}.
+To appreciate the benefit of Assumption~\ref{ass:exog}, consider the following example. Suppose that years of education is a component of $\bm{X}^{d'}_{k,{a'}}$. The joint distribution of $\bm{\varepsilon}_{k,a}^d$ and $\bm{X}^{d'}_{k,{a'}}$ can differ substantially across experimental and non-experimental samples. In the experimental sample, years of education are boosted by treatment, which is randomly assigned. In the non-experimental samples, however, there is no experimental variation. Individuals with high observed levels of education could have high values of $\bm{\varepsilon}_{k,a}^d$ due to omitted ability. This creates a fundamentally different dependence between $\bm{\varepsilon}_{k,a}^d$ and $\bm{X}_{k,{a'}}^{d'}$ in the non-experimental sample. Assumption~\ref{ass:exog} avoids this problem when making forecasts. Below, we establish that our forecasts based on this assumption are concordant with forecasts from approaches that do not necessarily require Assumption~\ref{ass:exog}.
 
 \textbf{Step 3. Determining Inputs.} Analysis of the non-experimental data reveals that the inputs determining labor income under Assumption~\ref{ass:exog} are: average PIAT achievement score from ages 5 to 7, completed education, labor income at age 21, and lagged labor income. Appendix Table~\ref{table:predlaborincome} shows that these variables predict labor income. Appendix~\ref{app:containsupport} shows that there is common support across datasets. We report tests for endogeneity of these variables in the experimental and auxiliary samples used in this paper in Appendix~\ref{appendix:methodology}.\footnote{These tests assume that $\bm{\varepsilon}_{k,a}^d, k \in \{e,n\}$, follows a factor structure. Factor structure models are widely used in structural estimation of production functions of skills during early childhood. See, e.g., \citet{Cunha_Heckman_2008_JHR} and \citet{Cunha_Heckman_etal_2010_est_tech_cognoncog}.} After conditioning on $\bm{X}_{k,a}^d$ and $\bm{B}_{k}$, we do not reject the null hypothesis of exogeneity. Accordingly, we use OLS for making our baseline estimates.
 
@@ -451,7 +451,7 @@ We also calculate medical expenditures before age 30.\footnote{See Appendix~\ref
 
 \subsection{Parental Labor Income} \label{section:pincome}
 
-\noindent ABC/CARE offers childcare to the parents of treated children for more than nine hours a day for five years, 50 weeks a year. Only $27\%$ of participant mothers of children reported living with a partner at baseline. This barely changed during the course of the experiment (see Appendix~\ref{appendix:background}). The childcare component generates substantial treatment effects on maternal labor force participation and parental labor income.\footnote{There is also an effect on maternal school enrollment. Some of the mothers decided to enroll in school and further their education. This could be one of the reasons why they make more money afterward. We report these treatment effects in Appendix~\ref{appendix:background}. We quantify the social cost of additional education in Appendix~\ref{appendix:education}.} In addition, subsidized childcare induced wage growth due to enhanced parental educational attainment and through wage growth due to work experience.
+\noindent ABC/CARE offers childcare to the parents of treated children for more than nine hours a day for five years, 50 weeks a year. Only $27\%$ of participant mothers of children reported living with a partner at baseline. This barely changed during the course of the experiment (see Appendix~\ref{appendix:background}). The childcare component generates substantial treatment effects on maternal labor force participation and parental labor income.\footnote{There is also an effect on maternal school enrollment. Some of the mothers of the participants decided to enroll in school and further their education. This could be one of the reasons why they make more money afterward. We quantify the social cost of additional education in Appendix~\ref{appendix:education}.} In addition, subsidized childcare induced wage growth due to enhanced parental educational attainment and through wage growth due to work experience.
 
 We observe parental labor income at eight different ages for the participants through age 21.\footnote{The ages at which parental labor income is observed are 0, 1.5, 3.5, 4.5, 8, 12, 15, and 21. At age 21 the mothers of the ABC/CARE subjects were, on average, 41 years old.}$^,$\footnote{We linearly interpolate parental labor income for ages for which we do not have observations between 0 and 21.} To estimate the profile of parental earnings over the entire life-cycle, we use two different approaches in Appendix~\ref{app:parentalincome}: (i) an approach based on projections using standard Mincer equations; and (ii) an approach based on the analysis of Section~\ref{section:cbamethodology}.
 
@@ -571,7 +571,7 @@ For the first estimate, we calculate the benefit/cost ratio using both the ``ret
 
 The remaining exercises in Table~\ref{table:comparing} are: (i) increase the age range over which we calculate the net-present value of labor income; or (ii) consider the value of all the components we analyze throughout the paper, in addition to labor income. The more inclusive the benefits measured and the longer the horizon over which they are measured, the greater the benefit/cost ratio. The final reported estimate, 7.3, is our baseline estimate that incorporates all of the components across the life cycles of the subjects.
 
-Our methodology provides a more accurate estimate of the benefits and costs of the ABC/CARE program. We better quantify the effects of the experiment by considering the multiplicity of benefits over the whole life cycle. We also better approximate the uncertainty of our estimates by considering both the sampling error in the experimental and auxiliary samples, the forecast error due to the interpolation and extrapolation, and the sensitivity of the estimates to externally specified parameters.
+Our methodology provides a more accurate estimate of the benefits and costs of the ABC/CARE program. We better quantify the effects of the experiment by considering the full array of benefits over the whole life cycle. We also better approximate the uncertainty of our estimates by considering both the sampling error in the experimental and auxiliary samples, the forecast error due to the interpolation and extrapolation, and the sensitivity of the estimates to externally specified parameters.
 
 \section{Summary} \label{section:conclusion}
 
