all edits in for anna to check

--- a/Appendices/Health/method_analysis.tex
+++ b/Appendices/Health/method_analysis.tex
@@ -21,7 +21,7 @@ I_{a,m} &=&  \bm{\mathit{1}} \left( \tilde{\bm{D}}_{0} \geq 0 \right) \bm{\Omega
 \end{eqnarray}
 where $\tilde{D}_{a,m} = \bm{\mathit{1}}  \left( I_{a,m} \geq 0 \right)$, $\tau \left( a \right)_{m}$ is a function of age,\footnote{In our empirical analysis, we approximate the coefficients on $\tau \left( a \right)_{m}$ using splines with knots at ages 35, 45, 55, 65, and 75.} and $\varepsilon_{a,m}$ is a time-varying age-$a$ shock, uncorrelated across ages, subjects, and health states. As in the forecasts of Section~\ref{section:cbamethodology}, we allow the model to depend on baseline variables, denoted by $\bm{B}$, and on variables that can be affected by treatment, which in this case we denote by $\bm{W}_a$ to reinforce that they are not the same variables that we use in Section~\ref{section:cbamethodology}. The variables in $\bm{W}_a$ contain health outcomes and other economic outcomes (e.g.,\ smoking, labor force participation, childrearing). $ \bm{\Omega}_{m},  \bm{\Lambda}_{m}, \bm{\beta}_{m},  \bm{\alpha}_{m}$ are the coefficient vectors associated with the initial state-occupancy indicators, first-order lagged state-occupancy indicators, current health and other economic outcomes, and baseline variables. In our empirical analysis, we estimate these vectors for each state occupancy $m \in \mathcal{M}$.
 
-Instead of supplementing the model in Equation~\eqref{eq:trans} with a model for initial conditions, we directly condition on them in Equation~\eqref{eq:trans}. Uncorrelatedess of $\varepsilon_{a,m}$ across ages, health states, and subjects together with normality allows us to perform separate estimation of the coefficients characterizing Equation~\eqref{eq:trans} for each $m \in \mathcal{M}$ using maximum likelihood. We estimate $\bm{\theta}_m := \left[   \bm{\Omega}_{m}, \bm{\Lambda}_{m}, \bm{\beta}_{m}, \alpha_{m}, \tau \left( a \right) _{m}  \right]$ for each $m \in \mathcal{M}$.
+Instead of supplementing the model in Equation~\eqref{eq:trans} with a model for initial conditions, we directly condition on them in Equation~\eqref{eq:trans}. Uncorrelatedess of $\varepsilon_{a,m}$ across ages, health states, and subjects together with normality allows us to perform separate estimation of the coefficients characterizing Equation~\eqref{eq:trans} for each $m \in \mathcal{M}$ using maximum likelihood. We estimate $\bm{\theta}_m := \left[   \bm{\Omega}_{m}, \bm{\Lambda}_{m}, \bm{\beta}_{m}, \bm{\alpha}_{m}, \tau \left( a \right) _{m}  \right]$ for each $m \in \mathcal{M}$.
 
 Despite the many simplifications on the definition of health states and on modeling state occupancies instead of state transitions, Appendix~\ref{appendix:health-validation} documents that our procedure performs well at fitting populations means of the outcomes that we consider.
 
