anna edits to paper edits 7/20

--- a/abc_comprehensivecba_revised.tex
+++ b/abc_comprehensivecba_revised.tex
@@ -451,7 +451,7 @@ We also calculate medical expenditures before age 30.\footnote{See Appendix~\ref
 
 \subsection{Parental Labor Income} \label{section:pincome}
 
-\noindent ABC/CARE offers childcare to the parents of treated children for more than nine hours a day for five years, 50 weeks a year. Only $27\%$ of participant mothers of children reported living with a partner at baseline. This barely changed during the course of the experiment (see Appendix~\ref{appendix:background}). The childcare component generates substantial treatment effects on maternal labor force participation and parental labor income.\footnote{There is also an effect on maternal school enrollment. Some of the mothers of the participants decided to enroll in school and further their education. This could be one of the reasons why they make more money afterward. We quantify the social cost of additional education in Appendix~\ref{appendix:education}.} In addition, subsidized childcare induced wage growth due to enhanced parental educational attainment and through wage growth due to work experience.
+\noindent ABC/CARE offers childcare to the parents of treated children for more than nine hours a day for five years, 50 weeks a year. Only $27\%$ of participant mothers of children reported living with a partner at baseline. This barely changed during the course of the experiment (see Appendix~\ref{appendix:background}). The childcare component generates substantial treatment effects on maternal labor force participation and parental labor income.\footnote{There is also an effect on maternal school enrollment. Some of the mothers of participants decided to enroll in school and further their education. This could be one of the reasons why they make more money afterward. We quantify the social cost of additional education in Appendix~\ref{appendix:education}.} In addition, subsidized childcare induced wage growth due to enhanced parental educational attainment and through wage growth due to work experience.
 
 We observe parental labor income at eight different ages for the participants through age 21.\footnote{The ages at which parental labor income is observed are 0, 1.5, 3.5, 4.5, 8, 12, 15, and 21. At age 21 the mothers of the ABC/CARE subjects were, on average, 41 years old.}$^,$\footnote{We linearly interpolate parental labor income for ages for which we do not have observations between 0 and 21.} To estimate the profile of parental earnings over the entire life-cycle, we use two different approaches in Appendix~\ref{app:parentalincome}: (i) an approach based on projections using standard Mincer equations; and (ii) an approach based on the analysis of Section~\ref{section:cbamethodology}.
 
